# voidvoice

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  com.detair.voidmic.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
assets/: voidmic.desktop
build-aux/: com.voidmic.VoidMic.yml
crates/app/: Cargo.toml
crates/app/src/: audio.rs  autostart.rs  config.rs  daemon.rs  gui.rs  main.rs  pulse_info.rs  updater.rs  virtual_device.rs
crates/app/src/gui/: advanced.rs  app.rs  controls.rs  devices.rs  engine.rs  mod.rs  tray.rs  wizard.rs
crates/core/: Cargo.toml
crates/core/src/: constants.rs  echo_cancel.rs  frame_adapter.rs  lib.rs  processor.rs
crates/lv2/: Cargo.toml  manifest.ttl  voidmic.ttl
crates/lv2/src/: lib.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  theme.rs  visualizer.rs  widgets.rs
packaging/aur/: PKGBUILD
scripts/: setup_dev.sh  setup_loopback.sh
src/: audio.rs  autostart.rs  config.rs  constants.rs  daemon.rs  echo_cancel.rs  gui.rs  main.rs  pulse_info.rs  updater.rs  virtual_device.rs
