[package]
name = "voidmic"
version = "0.4.0"
edition = "2021"
authors = ["Detair"]
description = "Hybrid AI Noise Reduction (RNNoise + Smart Gate)"
license = "MIT"
repository = "https://github.com/Detair/voidvoice"
readme = "README.md"
keywords = ["audio", "noise-cancellation", "rnnoise", "gaming"]
categories = ["multimedia::audio", "command-line-utilities"]

[dependencies]
nnnoiseless = "0.5.1"
cpal = "0.15.3"
ringbuf = "0.4.7"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
eframe = "0.26"
open = "5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
ctrlc = "3.4"
