[package]
name = "voidmic_app"
version = "0.9.0"
edition = "2021"
default-run = "voidmic_app"

description = "Hybrid AI Noise Reduction for Linux"
license = "MIT"
repository = "https://github.com/Detair/voidvoice"
homepage = "https://github.com/Detair/voidvoice"

[package.metadata.deb]
maintainer = "Detair <detair@pmind.de>"
copyright = "2026, Detair"
depends = "$auto"
assets = [
    ["../../target/release/voidmic_app", "usr/bin/voidmic", "755"],
    ["../../assets/voidmic.desktop", "usr/share/applications/voidmic.desktop", "644"],
    ["../../assets/icon_32.png", "usr/share/icons/hicolor/32x32/apps/voidmic.png", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "../../target/release/voidmic_app", dest = "/usr/bin/voidmic", mode = "755" },
    { source = "../../assets/voidmic.desktop", dest = "/usr/share/applications/voidmic.desktop", mode = "644" },
    { source = "../../assets/icon_32.png", dest = "/usr/share/icons/hicolor/32x32/apps/voidmic.png", mode = "644" },
]

[[bin]]
name = "voidmic_app"
path = "src/main.rs"

[dependencies]
voidmic_core = { path = "../core" }
cpal = "0.15.3"
ringbuf = "0.4.7"
voidmic_ui = { path = "../ui" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
open = "5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
ctrlc = "3.4"
dirs = "6.0.0"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
semver = "1.0.27"

# GUI dependencies
eframe = { version = "0.31", optional = true }
tray-icon = { version = "0.21.3", default-features = false, optional = true }
muda = { version = "0.17.1", default-features = false, features = ["gtk"], optional = true }
global-hotkey = { version = "0.7.0", optional = true }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"], optional = true }
crossbeam-channel = "0.5.15" # Needed for receiving from core
egui_plot = { version = "0.31", optional = true }

[features]
default = ["gui"]
gui = ["eframe", "tray-icon", "muda", "global-hotkey", "egui_plot", "image"]
