[package]
name = "voidmic_plugin"
version = "0.9.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
voidmic_core = { path = "../core" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
anyhow = "1.0"
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
egui = "0.31"
voidmic_ui = { path = "../ui" }
crossbeam-channel = "0.5.15"
